--- a/src/components/header-cards/cards.css
+++ b/src/components/header-cards/cards.css
@@ -14,10 +14,13 @@
 
 .im3 {
     position: absolute;
+    opacity: 0;
     top: -50px;
     left: 800px;
     width: 200px;
     z-index:3;
+    animation: slideFromTop 1.5s ease forwards;
+    animation-delay: 1.5s;
 }
 
 .im4 {
@@ -25,6 +28,7 @@
     left: 970px;
     width: 200px;
     z-index:2;
+    animation: slideFromRight 1.5s ease forwards;
 }
 
 .rotate9 {
@@ -34,3 +38,24 @@
 .rotate7 {
     transform: rotate(7deg);
     }
+
+    @keyframes slideFromTop {
+        from {
+          transform: translateY(-100%);
+          opacity: 1;
+        }
+        to {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+      
+      @keyframes slideFromRight {
+        from {
+          transform: translateX(100%);
+        }
+        to {
+          transform: translateX(0);
+
+        }
+      }
