--- a/src/components/header-cards/cards.css
+++ b/src/components/header-cards/cards.css
@@ -1,23 +1,20 @@
 .im1 {
   position: absolute;
-  left: 60%;
-  width: 300px;
+  right: 25%;
   z-index: 1;
 }
 
 .im2 {
   position: absolute;
-  left: 80%;
-  width: 300px;
+  right: 10%;
   z-index: 2;
 }
 
 .im3 {
   position: absolute;
   opacity: 1;
-  top: -60px;
+  top: -40px;
   left: 65%;
-  width: 300px;
   z-index: 3;
 }
 
@@ -26,8 +23,7 @@
   transform: rotate(7deg);
   opacity: 1;
   top: 10%;
-  left: 85%;
-  width: 300px;
+  right: 8%;
   z-index: 2;
 }
 
@@ -37,7 +33,7 @@
   opacity: 1;
   left: 110%;
   visibility: hidden;
-  top: -20%;
+  top: -50%;
   z-index: 3;
   
 }
@@ -45,8 +41,8 @@
 .hand-02 {
   position: absolute;
   transform: rotate(5deg);
-  left: 74%;
-  top: -600px;
+  right: 20%;
+  top: -850px;
   visibility: hidden;
   z-index: 4;
 }
