--- a/src/components/about-cards/about-cards.css
+++ b/src/components/about-cards/about-cards.css
@@ -1,169 +1,200 @@
 /* Карты команды */
 .im7_0 {
     position: absolute;
-    transform: rotate(100deg);
-    width: 100%;
-    top: 0 px;
-        left: 100px;
+    transform: rotate(0deg);
+    width: 200%;
+    top: 200 px;
+        left: 0px;
         padding: 0;
         z-index:1;
     }
     .im7_1 {
     position: absolute;
-        animation: move1 1s linear 1;
-        animation-fill-mode: forwards;
-        width: 100%;
-    top: 0 px;
-        left: -50px;
-        padding: 0;
-        z-index:2;
+    animation: move1 9s linear infinite;
+    animation-fill-mode: forwards;
+    width: 100%;
+    top: 0px;
+    left: 125px;
+    padding: 0;
+    z-index:8;
     }
     @keyframes move1 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);}
-    to {
-    left: 120px;
-    transform: rotate(5deg);}
+   0% {
+    top: 0px;
+    opacity:1;
+    z-index:2}
+    16.7% {
+    top: 0px;
+    opacity:1;
+    z-index:8}
+    33.4% {
+    top: 550px;
+    opacity:1;
+    z-index:8;}
+    100% {
+    top: 550px;
+    opacity:1;
+    z-index:2;}
     }
     .im7_2 {
     position: absolute;
-        animation: move2 1s linear 1;
+        animation: move2 9s linear infinite;
         animation-fill-mode: forwards;
         animation-delay: 1.5s;
         opacity: 0;
         width: 100%;
-    top: 0 px;
-        left: 150px;
+        top: 0 px;
+        left: 125px;
         padding: 0;
-        z-index:2;
+        z-index:7;
     }
     @keyframes move2 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);
+   0% {
+    top: 0px;
     opacity:1;}
-    to {
-    left: 140px;
-    transform: rotate(-5deg);
+    16.7% {
+    top: 0px;
+    opacity:1;}
+    33.4% {
+    top: 550px;
+    opacity:1;}
+    100% {
+    top: 550px;
     opacity:1;}
     }
     .im7_3 {
     position: absolute;
-        animation: move3 1s linear 1;
+        animation: move3 9s linear infinite;
         animation-fill-mode: forwards;
         animation-delay: 3s;
         opacity: 0;
         width: 100%;
-    top: 0 px;
-        left: 550px;
+        top: 0px;
+        left: 125px;
         padding: 0;
-        z-index:3;
+        z-index:6;
     }
     @keyframes move3 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);
+   0% {
+    top: 0px;
     opacity:1;}
-    to {
-    left: 130px;
-    transform: rotate(0deg);
+    16.7% {
+    top: 0px;
+    opacity:1;}
+    33.4% {
+    top: 550px;
+    opacity:1;}
+    100% {
+    top: 550px;
     opacity:1;}
     }
     
     .im7_4 {
     position: absolute;
-        animation: move4 1s linear 1;
+        animation: move4 9s linear infinite;
         animation-fill-mode: forwards;
         animation-delay: 4.5s;
         opacity: 0;
         width: 100%;
-    top: 0 px;
-        left: -50px;
+        top: 0px;
+        left: 125px;
         padding: 0;
-        z-index:4;
+        z-index:5;
     }
     @keyframes move4 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);
+    0% {
+    top: 0px;
     opacity:1;}
-    to {
-    left: 160px;
-    transform: rotate(-9deg);
+    16.7% {
+    top: 0px;
+    opacity:1;}
+    33.4% {
+    top: 550px;
+    opacity:1;}
+    100% {
+    top: 550px;
     opacity:1;}
     }
     .im7_5 {
     position: absolute;
-        animation: move5 1s linear 1;
+        animation: move5 9s linear infinite;
         animation-fill-mode: forwards;
         animation-delay: 6s;
         opacity: 0;
         width: 100%;
-    top: 0 px;
-        left:150px;
+        top: 0px;
+        left: 125px;;
         padding: 0;
-        z-index:5;
+        z-index:4;
     }
     @keyframes move5 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);
+    0% {
+    top: 0px;
     opacity:1;}
-    to {
-    left: 130px;
-    transform: rotate(7deg);
+    16.7% {
+    top: 0px;
+    opacity:1;}
+    33.4% {
+    top: 550px;
+    opacity:1;}
+    100% {
+    top: 550px;
     opacity:1;}
     }
     .im7_6 {
     position: absolute;
-        animation: move6 1s linear 1;
+        animation: move6 9s linear infinite;
         animation-fill-mode: forwards;
         animation-delay: 7.5s;
         opacity: 0;
         width: 100%;
-    top: 0 px;
-        left: 450px;
+        top: 0px;
+        left: 125px;
         padding: 0;
-        z-index:6;
+        z-index:3;
     }
     @keyframes move6 {
-    from {
-    left:0px;
-    transform: rotate(-45deg);
+    0% {
+    top: 0px;
     opacity:1;}
-    to {
-    left: 150px;
-    transform: rotate(-2deg);
+    16.7% {
+    top: 0px;
+    opacity:1;}
+    33.4% {
+    top: 550px;
+    opacity:1;}
+    100% {
+    top: 550px;
     opacity:1;}
     }
     .im7_7 {
     position: absolute;
-        animation: move7 1.5s linear 6;
-        animation-fill-mode: forwards;
-        transform: rotate(-135deg);
-        opacity: 1;
-    top: -100 px;
-        left: 100px;
-        width: 30%;
-        padding: 0;
-        z-index:7;
+    animation: move7 1.5s linear infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 1.5s;
+    transform: rotate(-120deg);
+    opacity: 0;
+    top: -400px;
+    left: 50px;
+    width: 30%;
+    padding: 0;
+    z-index:8;
     }
     @keyframes move7 {
     0% {
-    left:-100px;
-    transform: rotate(-135deg);
+    top: -320px;
+    left: 30px;
+    transform: rotate(-100deg);
+    opacity:1;}
+    50% {
+    top: -130px;
+    left: 90px;
+    transform: rotate(-60deg);
     opacity:1;
-    top: -200px}
-    33% {
-    left: 50px;
-    transform: rotate(-120deg);
-    opacity:1;
-    top: -200px}
-    
+    }
     100% {
-    left: -500px;
-    transform: rotate(-160deg);
-    opacity:1;
-    top: -200px}
+    top: -320px;
+    left: 30px;
+    transform: rotate(-100deg);
+    opacity:1;}
     }
