Добавлены ссылки с 404 на главную, пересобран 3 слайд для ПК и моб.

--- a/src/app/notf.css
+++ b/src/app/notf.css
@@ -1,9 +1,24 @@
 .submenu3_1 {
     top:550px;
     display: grid;
+    background-color: aliceblue;
+    background: fixed;
     flex-direction: row;
     text-align: center;
     position: relative;
+    padding: 1rem;
+    }
+    .submenu3_2 {
+    top:0px;
+    left: 0px;
+    background-color: #ffffff;
+    background: fixed;
+    display: grid;
+    flex-direction: row;
+    text-align: center;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     padding: 1rem;
     }
 #container {
